--- a/src/app/components/survey/survey-list/survey-list.component.html
+++ b/src/app/components/survey/survey-list/survey-list.component.html
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="table-wrapper">
-    <table class="table table-light">
+    <table class="table">
+      <colgroup>
+        <col width="90%">
+        <col width="10%">
+      </colgroup>
       <thead>
         <tr>
           <th>Name</th>
