--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
-<h1>
-  {{title}}
-</h1>
 
-<button routerLink="/survey">Survey</button>
-<button routerLink="/survey/detail">Orders</button>
-<button routerLink="">Home</button>
-
+<app-header></app-header>
 <router-outlet></router-outlet>
 
