--- a/src/app/components/detail/survey-detail/survey-detail.component.html
+++ b/src/app/components/detail/survey-detail/survey-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container detail">
-  <h1>Detail {{param}}</h1>
+  <h1>Detail of {{param}}</h1>
   <p>
     <a [routerLink]="['/survey']" class="btn btn-success">Back to list</a>
   </p>
