--- a/src/app/components/detail/survey-detail/survey-detail.component.html
+++ b/src/app/components/detail/survey-detail/survey-detail.component.html
@@ -9,25 +9,42 @@
           <div class="card-body">
               <h5 class="card-title text-uppercase">{{survey.type}}</h5>
               <h6 class="card-subtitle text-muted">{{survey.label}}</h6> 
-              <div id="chart-wrapper" class="row" *ngIf="survey.type === 'qcm'">
-                <div class="col-md-4">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th>Products</th>
-                        <th>Count</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let product of survey.result" >
-                        <td>{{product.name}}</td>
-                        <td><strong>{{product.value}}</strong></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <div class="col-md-8">
-                  <canvas id="chart" appChart [attr.data-value]="surveyValue" [attr.data-label]="surveyLabel"></canvas>
+              <div id="chart-wrapper" *ngIf="survey.type === 'qcm'">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light" id="filter">
+                  <div class="collapse navbar-collapse">
+                    <form class="form-inline my-2 my-lg-0">
+                      <label>Filter: </label>
+                      <input class="form-control mr-sm-2" type="search" (keyup)="filter(survey.result, search.value)" #search placeholder="Search" aria-label="Search">
+                    </form>
+                  </div>
+                </nav>
+                <div class="row">
+                  <div class="col-md-4">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th>Products</th>
+                          <th>Count</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let product of survey.result" >
+                          <td>{{product.name}}</td>
+                          <td><strong>{{product.value}}</strong></td>
+                        </tr>
+                      </tbody>
+                      <tfoot *ngIf="survey.result.length === 0">
+                        <tr>
+                          <td colspan="2">
+                              <div class="alert alert-danger">Not Found</div>
+                          </td>
+                        </tr>
+                      </tfoot>
+                    </table>
+                  </div>
+                  <div class="col-md-8">
+                    <canvas id="chart" appChart [attr.data-value]="surveyValue | json" [attr.data-label]="surveyLabel | json"></canvas>
+                  </div>
                 </div>
               </div>
               <div id="number" *ngIf="survey.type === 'numeric'">
