--- a/src/app/components/detail/survey-detail/survey-detail.component.html
+++ b/src/app/components/detail/survey-detail/survey-detail.component.html
@@ -16,7 +16,7 @@
                 <div class="collapse navbar-collapse">
                   <form class="form-inline my-2 my-lg-0">
                     <label>Filter: </label>
-                    <input class="form-control mr-sm-2" type="search" aria-label="Search" (keyup)="filter(survey.result, search.value)" #search placeholder="Search">
+                    <input class="form-control mr-sm-2" type="search" aria-label="Search" (keyup)="filter(survey.result, search.value)" #search placeholder="Filter by Count">
                   </form>
                 </div>
               </nav>
