--- a/src/app/components/detail/survey-detail/survey-detail.component.css
+++ b/src/app/components/detail/survey-detail/survey-detail.component.css
@@ -8,7 +8,7 @@
   opacity: 1;
 }
 .card h6 {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 table {
   border: solid 1px #dee2e6;
@@ -26,7 +26,7 @@ table {
   margin: 0;
 }
 h1 {
-  padding: 20px 0 10px;
+  padding: 10px 0 0;
   font-size: 30px;
 }
 .detail {
