--- a/src/app/components/detail/survey-detail/survey-detail.component.html
+++ b/src/app/components/detail/survey-detail/survey-detail.component.html
@@ -1,6 +1,8 @@
-<div class="container detail">
+<div class="big-title">
   <h1>Detail of {{param}}</h1>
-  <p class="text-right">
+</div>
+<div class="container detail">
+  <p class="text-right back-btn">
     <a class="btn btn-success" [routerLink]="['/survey']">Back to list</a>
   </p>
   <div class="row">
