--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,8 +2,9 @@ footer {
   position: fixed;
   bottom: 0;
   line-height: 40px;
-  width: 100%;
+  width: 10%;
   left: 0;
   color: #ccc;
-  background: #f5f5f5;
+  background: #fff;
+  z-index: 3;
 }
