--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container">
-    <a class="navbar-brand" [routerLink]="['/']">Survey</a>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a [routerLink]="['/']" routerLinkActive="active" title="back to home" class="nav-link" [routerLinkActiveOptions]="{exact: true}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/survey']" routerLinkActive="active" title="go to list" class="nav-link" [routerLinkActiveOptions]="{exact: true}">List of survey</a>
-        </li>
-      </ul>
-    </div>
+<aside class="sidebar">
+  <a class="navbar-brand" [routerLink]="['/']">Survey</a>
+  <div class="" id="navbarText">
+    <ul class="mr-auto">
+      <li class="nav-item">
+        <a [routerLink]="['/']" routerLinkActive="active" title="back to Home" class="nav-link" [routerLinkActiveOptions]="{exact: true}">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['/survey']" routerLinkActive="active" title="go to list" class="nav-link" [routerLinkActiveOptions]="{exact: true}">List of survey</a>
+      </li>
+    </ul>
   </div>
-</nav>
+</aside>
