--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="big-title">
+  <h1>Dashboard</h1>
+</div>
 <div class="container">
   <div class="jumbotron">
     <h1 class="display-4">Bocasay challenges Angular</h1>
