--- a/src/app/components/survey/survey-list/survey-list.component.html
+++ b/src/app/components/survey/survey-list/survey-list.component.html
@@ -1,3 +1,6 @@
+<div class="big-title">
+  <h1>List of surveys</h1>
+</div>
 <div class="container">
   <div class="table-wrapper">
     <table class="table">
