--- a/src/app/components/detail/survey-detail/survey-detail.component.html
+++ b/src/app/components/detail/survey-detail/survey-detail.component.html
@@ -58,7 +58,7 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th>Date</th>
+                      <th (click)="sort(caretUp, caretDown)">Date <i class="fa fa-caret-up" #caretUp></i><i class="fa fa-caret-down" #caretDown></i></th>
                       <th>Hours</th>
                     </tr>
                   </thead>
