add icon sort detail

--- a/src/app/components/detail/survey-detail/survey-detail.component.html
+++ b/src/app/components/detail/survey-detail/survey-detail.component.html
@@ -27,8 +27,8 @@
                   <table class="table">
                     <thead>
                       <tr>
-                        <th>Products</th>
-                        <th>Count</th>
+                        <th>Products <i class="fa fa-caret-up" #caretUp></i><i class="fa fa-caret-down" #caretDown></i></th>
+                        <th>Count <i class="fa fa-caret-up" #caretUp></i><i class="fa fa-caret-down" #caretDown></i></th>
                       </tr>
                     </thead>
                     <tbody>
