--- a/src/app/components/detail/survey-detail/survey-detail.component.html
+++ b/src/app/components/detail/survey-detail/survey-detail.component.html
@@ -27,7 +27,7 @@
                   <table class="table">
                     <thead>
                       <tr>
-                        <th (click)="sort('product', caretUp, caretDown)">Products <i class="fa fa-caret-up" #caretUp></i><i class="fa fa-caret-down" #caretDown></i></th>
+                        <th>Products</th>
                         <th>Count</th>
                       </tr>
                     </thead>
